--- a/static/languages/cs.json
+++ b/static/languages/cs.json
@@ -1,7 +1,7 @@
 {
   "heading": "Uhlíková náročnost výroby elektřiny napříč všemi zeměmi EU",
-  "subheading": "Intenzita emisí skleníkových plynů (GHG) na členské státy v roce 2020",
-  "legend1": "v ekvivalentu oxidu uhličitého na kilowatthodinu",
+  "subheading": "Intenzita emisí skleníkových plynů (GHG) na členské státy v roce 2020, v ekvivalentu oxidu uhličitého na kilowatthodinu",
+  "legend1": "Nejsou k dispozici žádné údaje",
   "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Zdroj",
   "textSource": "EHP: https://www.eea.europa.eu/",
@@ -9,15 +9,5 @@
   "textNote": "Evropská informační a pozorovací síť pro životní prostředí (Eionet)",
   "textDataAccess": "Přístup k datům",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=cs",
-  "textCountryClick": "Klikněte pro více informací",
-  "extraInfoText_AL": "Kandidátská země od roku 2003",
-  "extraInfoLink_AL": "",
-  "extraInfoText_ME": "Kandidátská země od roku 2010",
-  "extraInfoLink_ME": "",
-  "extraInfoText_MK": "Kandidátská země od roku 2005",
-  "extraInfoLink_MK": "",
-  "extraInfoText_RS": "Kandidátská země od roku 2003",
-  "extraInfoLink_RS": "",
-  "extraInfoText_UA": "Kandidátská země od roku 2003",
-  "extraInfoLink_UA": ""
+  "textCountryClick": "Klikněte pro více informací"
 }
