--- a/static/languages/da.json
+++ b/static/languages/da.json
@@ -1,7 +1,7 @@
 {
   "heading": "Kulstofintensitet i produktionen af elektricitet i alle EU-lande",
-  "subheading": "Drivhusgasemissionsintensitet (GHG) pr. medlemslande i 2020",
-  "legend1": "i kuldioxidækvivalent pr. kilowatttime",
+  "subheading": "Drivhusgasemissionsintensitet (GHG) pr. medlemslande i 2020, i kuldioxidækvivalent pr. kilowatttime",
+  "legend1": "Ingen tilgængelig data",
   "tooltip1": "g CO2e/kW t",
   "textSourceDescription": "Kilde",
   "textSource": "EØS: https://www.eea.europa.eu/",
@@ -9,15 +9,5 @@
   "textNote": "European Environment Information and Observation Network (Eionet)",
   "textDataAccess": "Få adgang til data",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=da",
-  "textCountryClick": "Klik for mere info",
-  "extraInfoText_AL": "Kandidatland siden 2003",
-  "extraInfoLink_AL": "",
-  "extraInfoText_ME": "Kandidatland siden 2010",
-  "extraInfoLink_ME": "",
-  "extraInfoText_MK": "Kandidatland siden 2005",
-  "extraInfoLink_MK": "",
-  "extraInfoText_RS": "Kandidatland siden 2003",
-  "extraInfoLink_RS": "",
-  "extraInfoText_UA": "Kandidatland siden 2003",
-  "extraInfoLink_UA": ""
+  "textCountryClick": "Klik for mere info"
 }
