--- a/static/languages/ga.json
+++ b/static/languages/ga.json
@@ -1,7 +1,7 @@
 {
   "heading": "Déine charbóin i dtáirgeadh an leictreachais ar fud na dtíortha AE go léir",
-  "subheading": "Déine astaíochtaí gás ceaptha teasa (GHG) in aghaidh na mBallstát in 2020",
-  "legend1": "i gcoibhéis dé-ocsaíd charbóin in aghaidh na cileavata uair an chloig",
+  "subheading": "Déine astaíochtaí gás ceaptha teasa (GHG) in aghaidh na mBallstát in 2020, mar choibhéis dé-ocsaíd charbóin in aghaidh na cileavata",
+  "legend1": "Níl aon sonraí ar fáil",
   "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Foinse",
   "textSource": "EEA: https://www.eea.europa.eu/",
@@ -9,15 +9,5 @@
   "textNote": "An Líonra Eorpach um Fhaisnéis agus um Fhaire ar an gComhshaol (Eionet)",
   "textDataAccess": "Faigh rochtain ar na sonraí",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=ga",
-  "textCountryClick": "Cliceáil le haghaidh tuilleadh eolais",
-  "extraInfoText_AL": "Tír is iarrthóir ó 2003 i leith",
-  "extraInfoLink_AL": "",
-  "extraInfoText_ME": "An tír is iarrthóir ó 2010 i leith",
-  "extraInfoLink_ME": "",
-  "extraInfoText_MK": "An tír is iarrthóir ó 2005 i leith",
-  "extraInfoLink_MK": "",
-  "extraInfoText_RS": "Tír is iarrthóir ó 2003 i leith",
-  "extraInfoLink_RS": "",
-  "extraInfoText_UA": "Tír is iarrthóir ó 2003 i leith",
-  "extraInfoLink_UA": ""
+  "textCountryClick": "Cliceáil le haghaidh tuilleadh eolais"
 }
