--- a/static/languages/hu.json
+++ b/static/languages/hu.json
@@ -1,7 +1,7 @@
 {
   "heading": "A villamosenergia-termelés szén-dioxid-intenzitása az EU összes országában",
-  "subheading": "Az üvegházhatású gázok kibocsátásának (ÜHG) intenzitása tagállamonként 2020-ban",
-  "legend1": "szén-dioxid egyenértékben kilowattóránként",
+  "subheading": "Az üvegházhatású gázok kibocsátásának (ÜHG) intenzitása tagállamonként 2020-ban, szén-dioxid egyenértékben kilowattóránként",
+  "legend1": "Nincs elérhető adat",
   "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Forrás",
   "textSource": "EGT: https://www.eea.europa.eu/",
@@ -9,15 +9,5 @@
   "textNote": "Európai Környezetvédelmi Információs és Megfigyelő Hálózat (Eionet)",
   "textDataAccess": "Hozzáférés az adatokhoz",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
-  "textCountryClick": "Kattintson további információkért",
-  "extraInfoText_AL": "2003 óta tagjelölt ország",
-  "extraInfoLink_AL": "",
-  "extraInfoText_ME": "2010 óta tagjelölt ország",
-  "extraInfoLink_ME": "",
-  "extraInfoText_MK": "2005 óta tagjelölt ország",
-  "extraInfoLink_MK": "",
-  "extraInfoText_RS": "2003 óta tagjelölt ország",
-  "extraInfoLink_RS": "",
-  "extraInfoText_UA": "2003 óta tagjelölt ország",
-  "extraInfoLink_UA": ""
+  "textCountryClick": "Kattintson további információkért"
 }
