--- a/static/languages/mt.json
+++ b/static/languages/mt.json
@@ -1,7 +1,7 @@
 {
   "heading": "Intensità tal-karbonju tal-produzzjoni tal-elettriku fil-pajjiżi kollha tal-UE",
-  "subheading": "Intensità tal-emissjonijiet tal-gassijiet serra (GHG) għal kull stati membri fl-2020",
-  "legend1": "f'ekwivalenti ta' dijossidu tal-karbonju għal kull kilowatt siegħa",
+  "subheading": "Intensità ta' emissjonijiet ta' gassijiet serra (GHG) għal kull stati membri fl-2020, f'ekwivalenti ta' dijossidu tal-karbonju għal kull kilowatt siegħa",
+  "legend1": "L-ebda dejta disponibbli",
   "tooltip1": "g CO2e/kW h",
   "textSourceDescription": "Sors",
   "textSource": "ŻEE: https://www.eea.europa.eu/",
@@ -9,15 +9,5 @@
   "textNote": "Netwerk Ewropew ta' Informazzjoni u Osservazzjoni Ambjentali (Eionet)",
   "textDataAccess": "Aċċessa għad-data",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
-  "textCountryClick": "Ikklikkja għal aktar informazzjoni",
-  "extraInfoText_AL": "Pajjiż kandidat mill-2003",
-  "extraInfoLink_AL": "",
-  "extraInfoText_ME": "Pajjiż kandidat mill-2010",
-  "extraInfoLink_ME": "",
-  "extraInfoText_MK": "Pajjiż kandidat mill-2005",
-  "extraInfoLink_MK": "",
-  "extraInfoText_RS": "Pajjiż kandidat mill-2003",
-  "extraInfoLink_RS": "",
-  "extraInfoText_UA": "Pajjiż kandidat mill-2003",
-  "extraInfoLink_UA": ""
+  "textCountryClick": "Ikklikkja għal aktar informazzjoni"
 }
