Updated text in all language json files

--- a/static/languages/sl.json
+++ b/static/languages/sl.json
@@ -7,7 +7,7 @@
   "textSource": "EGP: https://www.eea.europa.eu/",
   "textNoteDescription": "Opomba",
   "textNote": "Evropsko okoljsko informacijsko in opazovalno omrežje (Eionet)",
-  "textDataAccess": "Dostopajte do podatkov",
+  "textDataAccess": "Dostop do podatkov",
   "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
   "textCountryClick": "Kliknite za več informacij"
 }
