--- a/static/languages/fr.json
+++ b/static/languages/fr.json
@@ -8,6 +8,6 @@
   "textNoteDescription": "Noter",
   "textNote": "Réseau européen d'information et d'observation de l'environnement (Eionet)",
   "textDataAccess": "Accéder aux données",
-  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
+  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=fr",
   "textCountryClick": "Cliquez pour plus d'informations"
 }
