Updated text in all language json files

--- a/static/languages/bg.json
+++ b/static/languages/bg.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Въглеродна интензивност на производството на електроенергия във всички страни от ЕС",
+  "heading": "Въглероден отпечатък от производството на електроенергия във всички страни от ЕС",
   "subheading": "Интензитет на емисиите на парникови газове (ПГ) по държави-членки през 2020 г., в еквивалент на въглероден диоксид на киловатчас",
   "legend1": "Няма данни",
   "tooltip1": "g CO2e/kW h",
