--- a/static/languages/cs.json
+++ b/static/languages/cs.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Uhlíková náročnost výroby elektřiny napříč všemi zeměmi EU",
+  "heading": "Uhlíková stopa výroby elektřiny ve všech zemích EU",
   "subheading": "Intenzita emisí skleníkových plynů (GHG) na členské státy v roce 2020, v ekvivalentu oxidu uhličitého na kilowatthodinu",
   "legend1": "Nejsou k dispozici žádné údaje",
   "tooltip1": "g CO2e/kW h",
