--- a/static/languages/da.json
+++ b/static/languages/da.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Kulstofintensitet i produktionen af elektricitet i alle EU-lande",
+  "heading": "Carbon footprint af elproduktion i alle EU-lande",
   "subheading": "Drivhusgasemissionsintensitet (GHG) pr. medlemslande i 2020, i kuldioxidækvivalent pr. kilowatttime",
   "legend1": "Ingen tilgængelig data",
   "tooltip1": "g CO2e/kW t",
