--- a/static/languages/de.json
+++ b/static/languages/de.json
@@ -1,5 +1,5 @@
 {
-  "heading": "CO2-Intensität der Stromerzeugung in allen EU-Ländern",
+  "heading": "CO2-Fußabdruck der Stromerzeugung in allen EU-Ländern",
   "subheading": "Intensität der Treibhausgasemissionen (THG) nach Mitgliedsstaaten im Jahr 2020, in Kohlendioxidäquivalent pro Kilowattstunde",
   "legend1": "Keine Daten verfügbar",
   "tooltip1": "g CO2e/kWh",
