--- a/static/languages/el.json
+++ b/static/languages/el.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Ένταση άνθρακα της παραγωγής ηλεκτρικής ενέργειας σε όλες τις χώρες της ΕΕ",
+  "heading": "Ανθρακούχο αποτύπωμα παραγωγής ηλεκτρικής ενέργειας σε όλες τις χώρες της ΕΕ",
   "subheading": "Ένταση εκπομπών αερίων θερμοκηπίου (GHG) ανά κράτος μέλος το 2020, σε ισοδύναμο διοξειδίου του άνθρακα ανά κιλοβατώρα",
   "legend1": "Δεν υπάρχουν διαθέσιμα δεδομένα",
   "tooltip1": "g CO2e/kW h",
