--- a/static/languages/es.json
+++ b/static/languages/es.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Intensidad de carbono de la producción de electricidad en todos los países de la UE",
+  "heading": "Huella de carbono de la generación de electricidad en todos los países de la UE",
   "subheading": "Intensidad de las emisiones de gases de efecto invernadero (GEI) por estado miembro en 2020, en dióxido de carbono equivalente por kilovatio hora",
   "legend1": "Datos no disponibles",
   "tooltip1": "g CO2e/kW·h",
