--- a/static/languages/et.json
+++ b/static/languages/et.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Elektritootmise süsinikusisaldus kõigis EL-i riikides",
+  "heading": "Elektritootmise süsiniku jalajälg kõigis EL-i riikides",
   "subheading": "Kasvuhoonegaaside heitkoguste (KHG) intensiivsus liikmesriikide kohta 2020. aastal süsinikdioksiidi ekvivalendis kilovatt-tunni kohta",
   "legend1": "Andmed puuduvad",
   "tooltip1": "g CO2e/kW h",
