--- a/static/languages/fi.json
+++ b/static/languages/fi.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Sähköntuotannon hiili-intensiteetti kaikissa EU-maissa",
+  "heading": "Sähköntuotannon hiilijalanjälki kaikissa EU-maissa",
   "subheading": "Kasvihuonekaasupäästöjen (GHG) intensiteetti jäsenvaltioittain vuonna 2020 hiilidioksidiekvivalentteina kilowattituntia kohti",
   "legend1": "Tietoja ei ole saatavilla",
   "tooltip1": "g CO2e/kW h",
