--- a/static/languages/fr.json
+++ b/static/languages/fr.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Intensité carbone de la production d'électricité dans tous les pays de l'UE",
+  "heading": "Empreinte carbone de la production d'électricité dans tous les pays de l'UE",
   "subheading": "Intensité des émissions de gaz à effet de serre (GES) par État membre en 2020, en équivalent dioxyde de carbone par kilowattheure",
   "legend1": "Pas de données disponibles",
   "tooltip1": "g CO2e/kWh",
@@ -8,6 +8,6 @@
   "textNoteDescription": "Noter",
   "textNote": "Réseau européen d'information et d'observation de l'environnement (Eionet)",
   "textDataAccess": "Accéder aux données",
-  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=fr",
+  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
   "textCountryClick": "Cliquez pour plus d'informations"
 }
