--- a/static/languages/ga.json
+++ b/static/languages/ga.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Déine charbóin i dtáirgeadh an leictreachais ar fud na dtíortha AE go léir",
+  "heading": "Lorg carbóin giniúna leictreachais i ngach tír san AE",
   "subheading": "Déine astaíochtaí gás ceaptha teasa (GHG) in aghaidh na mBallstát in 2020, mar choibhéis dé-ocsaíd charbóin in aghaidh na cileavata",
   "legend1": "Níl aon sonraí ar fáil",
   "tooltip1": "g CO2e/kW h",
