--- a/static/languages/hr.json
+++ b/static/languages/hr.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Intenzitet ugljika u proizvodnji električne energije u svim zemljama EU",
+  "heading": "Ugljični otisak proizvodnje električne energije u svim zemljama EU",
   "subheading": "Intenzitet emisije stakleničkih plinova (GHG) po državama članicama u 2020., u ekvivalentu ugljičnog dioksida po kilovatsatu",
   "legend1": "Nema dostupnih podataka",
   "tooltip1": "g CO2e/kW h",
