--- a/static/languages/hu.json
+++ b/static/languages/hu.json
@@ -1,5 +1,5 @@
 {
-  "heading": "A villamosenergia-termelés szén-dioxid-intenzitása az EU összes országában",
+  "heading": "A villamosenergia-termelés szénlábnyoma az EU összes országában",
   "subheading": "Az üvegházhatású gázok kibocsátásának (ÜHG) intenzitása tagállamonként 2020-ban, szén-dioxid egyenértékben kilowattóránként",
   "legend1": "Nincs elérhető adat",
   "tooltip1": "g CO2e/kW h",
