--- a/static/languages/it.json
+++ b/static/languages/it.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Intensità di carbonio della produzione di elettricità in tutti i paesi dell'UE",
+  "heading": "Impronta di carbonio della produzione di elettricità in tutti i paesi dell'UE",
   "subheading": "Intensità delle emissioni di gas a effetto serra (GHG) per stato membro nel 2020, in equivalente di anidride carbonica per kilowattora",
   "legend1": "Nessun dato disponibile",
   "tooltip1": "g CO2e/kW h",
