--- a/static/languages/lt.json
+++ b/static/languages/lt.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Anglies dioksido intensyvumas gaminant elektros energiją visose ES šalyse",
+  "heading": "Anglies pėdsakas gaminant elektros energiją visose ES šalyse",
   "subheading": "Šiltnamio efektą sukeliančių dujų emisijos (ŠESD) intensyvumas kiekvienoje valstybėje narėje 2020 m., išreikštas anglies dioksido ekvivalentu vienai kilovatvalandei",
   "legend1": "Nėra duomenų",
   "tooltip1": "g CO2e/kW val",
