--- a/static/languages/lv.json
+++ b/static/languages/lv.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Oglekļa intensitāte elektroenerģijas ražošanā visās ES valstīs",
+  "heading": "Elektroenerģijas ražošanas oglekļa pēdas nospiedums visās ES valstīs",
   "subheading": "Siltumnīcefekta gāzu emisiju (SEG) intensitāte katrā dalībvalstī 2020. gadā, oglekļa dioksīda ekvivalentā uz kilovatstundu",
   "legend1": "Nav pieejami dati",
   "tooltip1": "g CO2e/kW h",
