--- a/static/languages/mt.json
+++ b/static/languages/mt.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Intensità tal-karbonju tal-produzzjoni tal-elettriku fil-pajjiżi kollha tal-UE",
+  "heading": "Carbon footprint tal-ġenerazzjoni tal-elettriku fil-pajjiżi kollha tal-UE",
   "subheading": "Intensità ta' emissjonijiet ta' gassijiet serra (GHG) għal kull stati membri fl-2020, f'ekwivalenti ta' dijossidu tal-karbonju għal kull kilowatt siegħa",
   "legend1": "L-ebda dejta disponibbli",
   "tooltip1": "g CO2e/kW h",
