--- a/static/languages/nl.json
+++ b/static/languages/nl.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Koolstofintensiteit van de productie van elektriciteit in alle EU-landen",
+  "heading": "CO2-voetafdruk van elektriciteitsopwekking in alle EU-landen",
   "subheading": "Broeikasgasemissie-intensiteit (BKG) per lidstaat in 2020, in kooldioxide-equivalent per kilowattuur",
   "legend1": "Geen gegevens beschikbaar",
   "tooltip1": "g CO2e/kW h",
