--- a/static/languages/pl.json
+++ b/static/languages/pl.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Emisja dwutlenku węgla w produkcji energii elektrycznej we wszystkich krajach UE",
+  "heading": "Ślad węglowy wytwarzania energii elektrycznej we wszystkich krajach UE",
   "subheading": "Intensywność emisji gazów cieplarnianych (GHG) na państwa członkowskie w 2020 r., w ekwiwalencie dwutlenku węgla na kilowatogodzinę",
   "legend1": "Brak dostępnych danych",
   "tooltip1": "g CO2e/kWh",
