--- a/static/languages/pt.json
+++ b/static/languages/pt.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Intensidade de carbono da produção de eletricidade em todos os países da UE",
+  "heading": "Pegada de carbono da geração de eletricidade em todos os países da UE",
   "subheading": "Intensidade de emissão de gases de efeito estufa (GEE) por estados membros em 2020, em equivalente de dióxido de carbono por quilowatt-hora",
   "legend1": "Nenhum dado disponível",
   "tooltip1": "g CO2e/kWh",
