--- a/static/languages/ro.json
+++ b/static/languages/ro.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Intensitatea carbonului producției de energie electrică în toate țările UE",
+  "heading": "Amprenta de carbon a producției de energie electrică în toate țările UE",
   "subheading": "Intensitatea emisiilor de gaze cu efect de seră (GES) per statele membre în 2020, în echivalent dioxid de carbon pe kilowatt oră",
   "legend1": "Nici o informatie disponibila",
   "tooltip1": "g CO2e/kW h",
