--- a/static/languages/sk.json
+++ b/static/languages/sk.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Uhlíková náročnosť výroby elektriny vo všetkých krajinách EÚ",
+  "heading": "Uhlíková stopa výroby elektriny vo všetkých krajinách EÚ",
   "subheading": "Intenzita emisií skleníkových plynov (GHG) na členské štáty v roku 2020 v ekvivalente oxidu uhličitého na kilowatthodinu",
   "legend1": "Nie sú k dispozícii žiadne údaje",
   "tooltip1": "g CO2e/kW h",
