--- a/static/languages/sv.json
+++ b/static/languages/sv.json
@@ -1,5 +1,5 @@
 {
-  "heading": "Kolintensiteten i elproduktionen i alla EU-länder",
+  "heading": "Koldioxidavtryck från elproduktion i alla EU-länder",
   "subheading": "Utsläppsintensiteten för växthusgaser (GHG) per medlemsländer 2020, i koldioxidekvivalenter per kilowattimme",
   "legend1": "Ingen data tillgänglig",
   "tooltip1": "g CO2e/kW h",
